[package]
name = "tokio-stdin-stdout"
version = "0.1.5"
license = "MIT/Apache-2.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
repository = "https://github.com/vi/tokio-stdin-stdout"
documentation = "https://docs.rs/tokio-stdin-stdout"
categories = ["asynchronous"]
description = """
Thread- and future::sync::mpsc-based AsyncRead/AsyncWrite stdin/stdout with little buffering
"""

[dependencies]
futures = "0.1"
tokio-io = "0.1"

[dev-dependencies]
tokio-core = "0.1"
tokio-codec = "0.1.0"
tokio = "0.1.7"
